# OCLSnippets

./: CMakeLists.txt
common/: CMakeLists.txt  common.h  oclhelpers.cpp  oclhelpers.hpp
constant/: CMakeLists.txt  constant.cl  constant.cpp  timed_constant.cpp
